<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidl_typesupport_gurumdds_cpp</name>
  <version>0.7.3</version>
  <description>Generate the C++ interfaces for GurumNetworks GurumDDS</description>
  <maintainer email="junhui@gurum.cc">junhui</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>gurumdds-2.5</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>gurumdds_cmake_module</buildtool_depend>
  <buildtool_depend>rosidl_cmake</buildtool_depend>
  <buildtool_depend>rosidl_generator_c</buildtool_depend>
  <buildtool_depend>rosidl_generator_cpp</buildtool_depend>

  <buildtool_export_depend>gurumdds-2.5</buildtool_export_depend>
  <buildtool_export_depend>ament_cmake</buildtool_export_depend>
  <buildtool_export_depend>gurumdds_cmake_module</buildtool_export_depend>
  <buildtool_export_depend>rcutils</buildtool_export_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>
  <buildtool_export_depend>rosidl_generator_c</buildtool_export_depend>
  <buildtool_export_depend>rosidl_generator_cpp</buildtool_export_depend>
  <buildtool_export_depend>rosidl_generator_dds_idl</buildtool_export_depend>

  <build_export_depend>rmw</build_export_depend>

  <exec_depend>rosidl_parser</exec_depend>
  <exec_depend>rosidl_typesupport_interface</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_typesupport_cpp_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
